# IncompressibleN-S

./: README.md
docs/: overleaf_ns.tex
results/: plot.gnu
src/: Boundary_Conditions.cpp  Boundary_Conditions.h  CMakeLists.txt  Grid.cpp  Grid.h  SOR.cpp  SOR.h  main.cpp  solver.cpp  solver.h  write2file.cpp  write2file.h
